AppInmobiliaria/force-app/main/default/objects/Noticia__c/Noticia__c.object-meta.xml
<CustomObject>
    <label>Noticia</label>
    <nameField>
        <displayFormat>NOT-{00000}</displayFormat>
        <label>Ref Noticia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Noticias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>