AppInmobiliaria/force-app/main/default/objects/Noticia__c/fields/Converted_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Converted_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Noticias</relationshipLabel>
    <relationshipName>Noticias</relationshipName>
    <type>Lookup</type>
</CustomField>