AppInmobiliaria/force-app/main/default/objects/Noticia__c/fields/Descripcion_Rumor__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Rumor__c</fullName>
    <label>Descripción del Rumor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>