AppInmobiliaria/force-app/main/default/objects/Noticia__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por investigar</fullName>
                <default>true</default>
                <label>Por investigar</label>
            </value>
            <value>
                <fullName>Contactado</fullName>
            </value>
            <value>
                <fullName>Descartado</fullName>
            </value>
            <value>
                <fullName>Convertido a Encargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>