AppInmobiliaria/force-app/main/default/objects/Noticia__c/fields/Fecha_Seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Seguimiento__c</fullName>
    <label>Fecha de Seguimiento</label>
    <type>Date</type>
</CustomField>