AppInmobiliaria/force-app/main/default/objects/Noticia__c/fields/Inmueble_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Inmueble_Objetivo__c</fullName>
    <label>Inmueble Objetivo</label>
    <referenceTo>Inmueble__c</referenceTo>
    <relationshipLabel>Noticias Captación</relationshipLabel>
    <relationshipName>Noticias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>