AppInmobiliaria/force-app/main/default/objects/Noticia__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen de Noticia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conserje</fullName>
            </value>
            <value>
                <fullName>Cartel Balcón</fullName>
            </value>
            <value>
                <fullName>Puerta a puerta</fullName>
            </value>
            <value>
                <fullName>Revista/Internet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>