AppInmobiliaria/force-app/main/default/objects/Noticia__c/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>NAME</columns>
    <columns>Inmueble_Objetivo__c</columns>
    <columns>Fecha_Seguimiento__c</columns>
    <columns>Estado__c</columns>
    <columns>Descripcion_Rumor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>